fixes bug 113949 "Trunk crash [@ nsFileTransport::Process]" r=dougt, sr=mscott